<resources>
    <!-- App Title -->
    <string name="app_name">LiquidApp</string>
    <!-- App Title -->

    <!-- Main Page -->
    <string name="liquid_main_page_tournaments_button">Tournaments</string>
    <string name="liquid_main_page_games_button">Games</string>
    <string name="liquid_main_page_players_button">Players</string>
    <string name="liquid_main_page_store_button">Store</string>
    <string name="liquid_main_page_new_account_button">New Account</string>
    <!-- Main Page -->

    <!-- Menu -->
    <string name="liquid_bottom_navigation_menu_status">Status</string>
    <string name="liquid_bottom_navigation_menu_experiences">Experiences</string>
    <string name="liquid_bottom_navigation_menu_calendar">Calendar</string>
    <string name="liquid_bottom_navigation_menu_store">Store</string>
    <string name="liquid_bottom_navigation_menu_more">More</string>
    <!-- Menu -->

    <!-- Games -->
    <string name="liquid_games_title">Liquid Games</string>
    <!-- Games -->

    <!-- Store -->
    <string name="liquid_store_title">Liquid Store</string>
    <!-- Store -->

    <!-- Game Details Page -->
    <string name="liquid_game_detail_title">Game Detail Page</string>
    <string name="liquid_game_detail_players">Who are playing this game?</string>
    <!-- Game Details Page -->
</resources>