<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".viewmodel.MainActivity">

    <Button
        android:id="@+id/btn_tournaments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/liquid_main_page_tournaments_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_games"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/liquid_main_page_games_button"
        app:layout_constraintTop_toBottomOf="@id/btn_tournaments"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_players"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/liquid_main_page_players_button"
        app:layout_constraintTop_toBottomOf="@id/btn_games"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_store"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/liquid_main_page_store_button"
        app:layout_constraintTop_toBottomOf="@id/btn_players"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_new_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/liquid_main_page_new_account_button"
        app:layout_constraintTop_toBottomOf="@id/btn_store"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:menu="@menu/bottom_navigation_menu"/>


</androidx.constraintlayout.widget.ConstraintLayout>